--- a/slicefields/Makefile
+++ b/slicefields/Makefile
@@ -1,5 +1,5 @@
-# Makefile for MeshConvert
-# Antti Penttilä, 2012
+# Makefile for SliceFields
+# Antti Penttilä, 2013
 
 # Users can change these, but they should be already defined if using root makefile
 
@@ -9,25 +9,25 @@ ifndef $(ROOT_MAKE)
   FC = gfortran
   CC = gcc
   AR = ar
-  FOPT = -O2
+  FOPT = -O2 -std=f2003 -ffree-form
 
 endif
 
 
 # Users should not change these
 
-THIS = meshconvert
+THIS = slicefields
 
-SRC_NAMES = MeshConvert
+SRC_NAMES = SliceFields
 						
-SRC := $(addsuffix .f95, $(SRC_NAMES))
+SRC := $(addsuffix .f, $(SRC_NAMES))
 OBJ := $(addsuffix .o, $(SRC_NAMES))
 PROG := $(addsuffix .exe, $(SRC_NAMES))
 
 INC_DIR := ../mods/$(PLATFORM)/
 LIB_DIR := ../libs/$(PLATFORM)/
 BIN_DIR := ../bin/$(PLATFROM)/
-LOCAL_LIBS := -lPaulV_utility -lAP_library -lmeshVolume
+LOCAL_LIBS := -lPaulV_utility -lAP_library
 
 
 # Object recipies
@@ -35,7 +35,7 @@ LOCAL_LIBS := -lPaulV_utility -lAP_library -lmeshVolume
 all : $(THIS)
 
 $(OBJ) : $(SRC)
-	$(FC) -c -I$(INC_DIR) $(FOPT) $(addsuffix .f95, $(basename $@))
+	$(FC) -c -I$(INC_DIR) $(FOPT) $(addsuffix .f, $(basename $@))
 	
 $(PROG) : $(OBJ)
 	$(FC) -o $@ -I$(INC_DIR) -L$(LIB_DIR) $(FOPT) $(OBJ) $(LOCAL_LIBS) 
